		Continuing on 88100 interrupt/exception handling.
20081125	Bringing back the dummy machine_iyonix.c, which was removed
		in SVN rev. 4866.
		Fixing a bug in ARM pc-relative loads, when loading within
		the same page as the pc.
20081126	Continuing on the Iyonix mode: connecting initial i80321
		interrupts, and importing NetBSD/iyonix' bootconfig.h.
20081127	Importing iopi2creg.h from NetBSD (ARM Xscale I2C registers).
		Implementing the SH4 fsrra instruction, 1/sqrt(x), and the
		fipr instruction (vector dot-product).
20081203	Using register names in dev_clmpcc, but no actual progress on
		getting OpenBSD/mvme88k to boot further.
		FINALLY found the M88K bug I've been hunting: conditional
		branches with delay slots did not set the delay target address
		correctly in the case the branch was _not_ taken.
20081204	Interrupt exceptions (in cpu_dyntrans.c) are no longer
		generated while single-stepping. (It was too annoying.)
20081206	Implementing rudimentary tx/rx interrupts for clmpcc;
		OpenBSD/mvme88k can input/output stuff in userland now :)
		Implementing the "max negative number" condition of the
		M88K bcnd instruction.
		Implementing the M88K triadic register 'rot' instruction.
		The FIP != NIP+4 situation in the M88K rte instruction is now
		supported (i.e. executing one instruction from the pipeline,
		and then continuing somewhere else).
		Continuing on Dreamcast PowerVR register names, etc.
20081208	Beginning on a osiop (NCR 53C710 SCSI) device skeleton.
20081210	The SH4 Store Queue memory area is 0x04000000 long, not 0x40.
20081211	OpenBSD/m88k's badaddr() should now be able to detect
		invalid addresses; memory_rw.c causes exceptions on reads
		that fail (but no actual address is supplied yet).
20081212	Moving the Dreamcast PowerVR2 DMA handling from
		dev_dreamcast_g2 to dev_pvr, where it belongs.
20081213	Continuing on SH4 and PowerVR2 DMA.
		Moving the unsupported guest OSes from guestoses.html to a
		new page, unsupported.html, for clarity.