@@ -497,7 +497,10 @@ happened on real hardware.
 It is possible to run <a href="http://www.openbsd.org/mvme88k.html">OpenBSD/mvme88k</a>
 on an emulated MVME187 board in the emulator.
 
-<p><font color="#e00000">NOTE: This is not fully working yet!</font>
+<p><font color="#e00000">NOTE: This is not fully working yet! The osiop SCSI
+controller has not been implemented yet, so using disk images is not yet
+possible. These are preliminary instructions on how it <i>should</i> work,
+once it has been completed.</font>
 
 <p>To install OpenBSD/mvme88k onto an emulated harddisk image, follow these
 instructions:
